<resources>
    <string name="app_name">ShreeJi Mart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_number">Please enter A 10 Digit Number</string>
    <string name="SendOTP">Send OTP</string>
    <string name="auth_welcometopapp">Welcome To\nShreeJi Mart!</string>
    <string name="auth_signup">Sign Up</string>
    <string name="auth_welcomeappst">Your favourite foods delivered fast at your door.</string>
    <string name="Next">Next</string>
    <string name="auth_notificationcodesent">We have sent a verification code to</string>
    <string name="auth_welcomeoptsent">OTP Sent!</string>
    <string name="loading">Loading...</string>
    <string name="home_bestseller">Best Seller</string>
    <string name="home_seeall">See All</string>
    <string name="home_shopbycategory">Shop By Category</string>
    <string name="home_category">Category</string>
</resources>