<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="0dp"
            android:src="@drawable/img_bg_auth"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp">

        </ImageView>

        <LinearLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/enterPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
           android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/imageView"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_width="wrap_content"
                android:gravity="start|center"
                android:layout_gravity="start|center"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img_splash_svg" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/slidetitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_black_900"

                android:gravity="start|center"
                android:layout_marginVertical="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:text="@string/auth_welcometopapp"
                android:textColor="@color/navyblue"
                android:textSize="@dimen/_20ssp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/slidedescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                 android:layout_marginHorizontal="@dimen/_14sdp"
                android:fontFamily="@font/roboto_regular_400"
                android:gravity="start|center"
                android:text="@string/auth_welcomeappst"
                android:textColor="@color/navyblue20"
                android:textSize="@dimen/_14ssp"
                />

        </LinearLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:hint="@string/enter_number"
            android:layout_marginVertical="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@id/btnSendOtp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPhoneText"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="@font/roboto_regular_400"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendOtp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginVertical="@dimen/_14sdp"
            app:backgroundTint="@color/orange50"
            android:padding="@dimen/_12sdp"
            android:text="@string/SendOTP"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium_500"
            app:cornerRadius="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>
