<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:background="@drawable/bg_colapsingtoolbar">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/orange"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_collapseMode="pin">
            <ImageView
                android:id="@+id/ivProfile"
                android:clickable="true"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/img_splash_svg"
                app:layout_collapseMode="parallax" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/searchCv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_collapseMode="pin">
                    <TextView
                        android:id="@+id/searchEt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:paddingHorizontal="@dimen/_14sdp"
                        android:paddingVertical="@dimen/_14sdp"
                        android:hint="Search"
                        android:textSize="@dimen/_15ssp"
                        android:textColorHint="@color/black"
                        app:drawableStartCompat="@drawable/ic_search" />

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginVertical="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:id="@+id/llBestseller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
             >

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bestseller"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:fontFamily="@font/roboto_medium_500"
                    android:gravity="start|center"
                    android:text="@string/home_bestseller"
                    android:textColor="@color/navyblue"
                    android:textSize="@dimen/_14ssp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/seeallbestseller"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:fontFamily="@font/roboto_medium_500"
                    android:gravity="end|center"
                    android:text="@string/home_seeall"
                    android:textColor="@color/navyblue"
                    android:textSize="@dimen/_14ssp"
                    />



            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginVertical="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:id="@+id/rvBestSeller"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llBestseller"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_marginVertical="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:id="@+id/llCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvBestSeller">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:fontFamily="@font/roboto_medium_500"
                    android:gravity="start|center"
                    android:text="@string/home_shopbycategory"
                    android:textColor="@color/navyblue"
                    android:textSize="@dimen/_14ssp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/seeallcat"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:fontFamily="@font/roboto_medium_500"
                    android:gravity="end|center"
                    android:text="@string/home_seeall"
                    android:textColor="@color/navyblue"
                    android:textSize="@dimen/_14ssp"
                    />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginVertical="@dimen/_14sdp"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:id="@+id/rvCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llCategory"
                android:layout_width="match_parent"
                app:spanCount="4"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
