<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.OTPFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.OTPFragment">
j
    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/img_bg_auth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:titleTextColor="@color/black" />


            <LinearLayout
                android:id="@+id/linearlayout"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintBottom_toTopOf="@+id/llotp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp">

                <ImageView
                    android:contentDescription="@null"
                    android:id="@+id/imageView"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_width="wrap_content"
                    android:gravity="start|center"
                    android:layout_gravity="start|center"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/img_splash_svg" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/slidetitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_black_900"
                    android:includeFontPadding="false"
                    android:gravity="start|center"
                    android:layout_marginVertical="@dimen/_14sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:text="@string/auth_welcomeoptsent"
                    android:textColor="@color/navyblue"
                    android:textSize="@dimen/_20ssp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/slidedescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:fontFamily="@font/roboto_regular_400"
                    android:gravity="start|center"
                    android:text="@string/auth_notificationcodesent"
                    android:textColor="@color/navyblue20"
                    android:textSize="@dimen/_14ssp"
                    />

            </LinearLayout>

    <LinearLayout
        android:id="@+id/llotp"
        android:weightSum="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:hint="@string/enter_number"
        android:layout_marginVertical="@dimen/_14sdp"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etll1"
                android:layout_margin="@dimen/_2sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
                app:boxCornerRadiusTopEnd="@dimen/_12sdp"
                app:boxCornerRadiusBottomStart="@dimen/_12sdp"
                app:boxCornerRadiusTopStart="@dimen/_12sdp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@id/btnNext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et1"
                    android:maxLength="1"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/colorTextPrimary"
                    android:fontFamily="@font/roboto_bold_700"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etll2"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et2"
                android:maxLength="1"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="@font/roboto_bold_700"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etll3"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_2sdp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et3"
                android:maxLength="1"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="@font/roboto_bold_700"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etll4"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et4"
                android:maxLength="1"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="@font/roboto_bold_700"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etll5"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_2sdp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et5"
                android:maxLength="1"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="@font/roboto_bold_700"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etll6"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/_2sdp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et6"
                android:maxLength="1"
                android:layout_width="match_parent"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextPrimary"
                android:fontFamily="@font/roboto_bold_700"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_14sdp"
                android:layout_marginVertical="@dimen/_14sdp"
                app:backgroundTint="@color/orange50"
                android:padding="@dimen/_12sdp"
                android:text="@string/Next"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium_500"
                app:cornerRadius="@dimen/_24sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
